--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-Greeting
 
+0.0.2
+- Remove UNIVERSAL::require from Greeting.pm
+
 0.0.1  Sun Feb 10 06:15:24 2008
        Initial release.
 
