--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Acme-Greeting
 
+0.0.3
+- fix inf loop when "language" option is invalid
+- requires the correct version of perl.
+
 0.0.2
 - Remove UNIVERSAL::require from Greeting.pm
 
